# carry_my_luggage

./: .gitattributes  .gitmodules  .pre-commit-config.yaml  22sbest_pprbg.pt  CMakeLists.txt  README.md  SETUP.md  package.xml
img_tasks/: glasses_detect.py  person_detect.py  person_detect_dd.py  pprbg_detect.py
launch/: arm_test.launch  caarry_my_luggage.launch  carry_my_luggage.launch  cml.launch  dev.launch
msg/: ArmAction.msg  Detect.msg  MoveAction.msg  PaperDetect.msg
src/: 3link_inv_kine_opm.py  arm.py  audio.py  audio_system.py  camera_test.py  control_system.py  finger_direction.py  hand_direction.py  image_system.py  lidar.py  main.py  main_system.py  move.py  move_arm.py  paper_bag.py  person_detect.py  ser_pub.py  t.py  take_a_bag.py
src/yolov5-master/: detect_cap.py
srv/: HandDirection.srv  SpeechToText.srv  TextToSpeech.srv
udev/: README.md  rplidar.rules
